# neotec_intake

./: README.md  pyproject.toml
neotec_intake/: hooks.py  install.py  modules.txt
neotec_intake/neotec_intake/api/: intake.py
neotec_intake/neotec_intake/builders/: core.py  mapping.py
neotec_intake/neotec_intake/doctype/intake_document/: intake_document.json  intake_document.py
neotec_intake/neotec_intake/doctype/intake_profile/: intake_profile.json  intake_profile.py
neotec_intake/neotec_intake/doctype/intake_profile_field/: intake_profile_field.json  intake_profile_field.py
neotec_intake/neotec_intake/doctype/intake_settings/: intake_settings.json  intake_settings.py
neotec_intake/neotec_intake/extractors/: base.py  excel.py  image.py  invoice_text.py  llm.py  pdf.py
neotec_intake/neotec_intake/workspace/neotec_intake/: neotec_intake.json
neotec_intake/public/js/: intake_document.js
