[project]
name = "neotec_intake"
authors = [{ name = "Neotec Integrated Solution", email = "support@neotec.ai" }]
description = "Neotec DocIntake — read images, PDFs, Excel/CSV and turn them into draft ERPNext documents (Purchase Invoice, Journal Entry, Lead, and more)."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = ["openpyxl"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "neotec_intake"
